--- a/projects/expresionexpress/styles.css
+++ b/projects/expresionexpress/styles.css
@@ -36,12 +36,14 @@
 
 .menu>ol>.menu-item:hover:after {
     transform: scale(1);
+    color: #FFF;
 }
 
 .menu-item {
     position: relative;
     line-height: 1.2rem;
     text-align: center;
+    color: #FFF;
 }
 
 .menu-item a {
@@ -92,6 +94,7 @@
 @media screen and (max-width: 600px) {
     .menu {
         position: relative;
+        color: #FFF;
     }
     .menu:after {
         content: "";
@@ -112,6 +115,7 @@
         animation: fade 0.2s ease-out;
     }
     .menu>ol>.menu-item {
+        color: #FFF;
         flex: 0;
         opacity: 0;
         animation: enter 0.3s ease-out forwards;
@@ -211,8 +215,8 @@ a {
 /* unvisited link */
 
 a:link {
+    color: #FFF;
     font-weight: 900;
-    color: rosybrown;
 }
 
 
